fixed some bugs and added noty.js messages

--- a/MVC/Office Notes/templates/addNote.html
+++ b/MVC/Office Notes/templates/addNote.html
@@ -5,7 +5,7 @@
     <label for="text">Text:</label>
     <input type="text" id="text"/>
     <label for="deadline">Deadline:</label>
-    <input type="date" id="deadline"/>
+    <input type="date" id="deadline" placeholder="DD/MM/YYYY" />
     <a href="#"><button id="addNoteButton">Add note</button></a>
     <a href="#/home/"><button>Cancel</button></a>
 </div>
