--- a/MVC/Office Notes/templates/editNote.html
+++ b/MVC/Office Notes/templates/editNote.html
@@ -5,7 +5,7 @@
     <label for="text">Text:</label>
     <input type="text" id="text" value="{{text}}"/>
     <label for="deadline">Deadline:</label>
-    <input type="date" id="deadline" value="{{deadline}}"/>
-    <a href="#/myNotes/"><button id="editNoteButton">Edit note</button></a>
+    <input type="date" id="deadline" placeholder="DD/MM/YYYY" value="{{deadline}}"/>
+    <button id="editNoteButton">Edit note</button>
     <a href="#/myNotes/"><button>Cancel</button></a>
 </div>
